src/sketchup-stl/css/base.css
/*
 * Reset
 */
html {
  border: 0;
  overflow: hidden;
  cursor: default;
}

body {
  border: 0;
  padding: 0;
  margin: 0;
}


/*
 * Fonts
 */
html, input, textarea, select, button {
  font: caption; /* Use native UI fonts */
}


/*
 * Colors
 */
html {
  background: ThreeDFace; /* Use native window background */
}


/*
 * Buttons
 */
button {
  width: 80px;
  height: 25px;
}

